--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <nav>
-        <p>library</p>
-        <p>a project by <a href="https://github.com/robh-01">Roshan Bhusal</a> for <a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a></p>
+      <p>library</p>
+      <p>
+        a project by <a href="https://github.com/robh-01">Roshan Bhusal</a> for
+        <a href="https://www.theodinproject.com/" target="_blank"
+          >The Odin Project</a
+        >
+      </p>
     </nav>
+    <form action="" class="book-form">
+      <input type="text" />
+      <button type="button">submit</button>
+    </form>
     <main class="library">
-
+      <button class="addBook">+ Add book</button>
+      <div class="book-container"></div>
     </main>
-    <script src="script.js"></script>
-</body>
+    <script src="script.js" defer></script>
+  </body>
 </html>
