Add function to show books visually on the page
this commit add a function 'showBooksVisually' along with some changes in html & css file that work along with the function and make the book card visually good

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
       <p>library</p>
       <p>
-        a project by <a href="https://github.com/robh-01">Roshan Bhusal</a> for
+        a project by <a href="https://github.com/robh-01" target="_blank">Roshan Bhusal</a> for
         <a href="https://www.theodinproject.com/" target="_blank"
           >The Odin Project</a
         >
@@ -49,7 +49,8 @@
     </form>
     <main class="library">
       <button class="addBook">+ Add book</button>
-      <div class="book-container"></div>
+      <div class="book-container">
+      </div>
     </main>
     <script src="script.js" defer></script>
   </body>
