--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <div>
             <p>Have you read this book?</p>
             <label for="yes">Yes</label>
-            <input type="radio" id="yes" name="readStatus" value="1" checked>
+            <input type="radio" id="yes" name="readStatus" value="1">
             <label for="no">No</label>
-            <input type="radio" id="no" name="readStatus" value="0">
+            <input type="radio" id="no" name="readStatus" value="0" checked>
         </div>
         <button type="submit">Add</button>
       </fieldset>
